# climate-data-hackathon

./: README.md  app.py  clustering.py  country_summary_2023_clusters.csv  main.py  pyproject.toml  umarfile.ipynb
Weronikas Code/: Forcasting_all_CO2_data.ipynb  Forecasting_co2.ipynb  co2_emission_plot_with_T_anom.ipynb
data-from-other-repo/: INT-Export-02-25-2026_14-58-07.csv  README.csv
data-from-other-repo/biofuels/: biofuels-consumption-kmt.csv  biofuels-consumption-tbpd.csv  biofuels-consumption-tj.csv  biofuels-production-kmt.csv  biofuels-production-mtoe.csv  biofuels-production-qbtu.csv  biofuels-production-tj.csv  biomass-based-diesel-consumption-mtoe.csv  biomass-based-diesel-consumption-qbtu.csv  biomass-based-diesel-production-qbtu.csv  fuel-ethanol-consumption-kmt.csv  fuel-ethanol-consumption-tbpd.csv  fuel-ethanol-production-tj.csv
data-from-other-repo/coal-and-coke/: anthracite-consumption-kmt.csv  anthracite-consumption-qbtu.csv  anthracite-consumption-thousand-short-tons.csv  anthracite-exports-thousand-short-tons.csv  anthracite-imports-kmt.csv  anthracite-imports-mtoe.csv  anthracite-imports-qbtu.csv  anthracite-production-kmt.csv  anthracite-production-mtoe.csv  coal-exports-kmt.csv  (+58 more)
processed_data/: Carbon_data_prediction_6_yrs.npy  Carbon_data_prediction_6_yrs_backwards_1987.npy  Carbon_data_prediction_6_yrs_backwards_1992.npy  Carbon_data_prediction_6_yrs_backwards_1997.npy  Carbon_data_prediction_6_yrs_backwards_2005.npy  Carbon_data_prediction_6_yrs_backwards_2015.npy  forecasted_data_countries.csv
tests/: dynamic_co2_with_package.ipynb
(+356 files in other folders)
