[project]
name = "climate-data-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.12.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "rtree>=1.4.1",
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"
