[project]
name = "climate-data-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmcrameri>=1.9",
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pytorch-forecasting>=1.6.1",
    "rtree>=1.4.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"
